car, contact, service controller and views, about, footerAddress, testimonial view components added

--- a/Frontends/UdemyCarBook.WebUI/Views/_ViewImports.cshtml
+++ b/Frontends/UdemyCarBook.WebUI/Views/_ViewImports.cshtml
@@ -1,3 +1,9 @@
 ﻿@using UdemyCarBook.WebUI
 @using UdemyCarBook.WebUI.Models
+@using UdemyCarBook.DTOs.AboutDTOs
+@using UdemyCarBook.DTOs.TestimonialDTOs
+@using UdemyCarBook.DTOs.ServiceDTOs
+@using UdemyCarBook.DTOs.CarDTOs
+@using UdemyCarBook.DTOs.FooterAddressDTOs
+@using UdemyCarBook.DTOs.ContactDTOs
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
