--- a/Frontends/UdemyCarBook.WebUI/Views/About/Index.cshtml
+++ b/Frontends/UdemyCarBook.WebUI/Views/About/Index.cshtml
@@ -1,8 +1,11 @@
-﻿
-@{
+﻿@{
     ViewData["Title"] = "Index";
     Layout = "~/Views/UILayout/Index.cshtml";
 }
 
-<h1>Hakkımda sayfası</h1>
+@await Component.InvokeAsync("_AboutUsComponentPartial")
+
+@await Component.InvokeAsync("_BecomeADriverComponentPartial")
+
+@await Component.InvokeAsync("_TestimonialComponentPartial")
 
