service become partial and default page added, modified

--- a/Frontends/UdemyCarBook.WebUI/Views/_ViewImports.cshtml
+++ b/Frontends/UdemyCarBook.WebUI/Views/_ViewImports.cshtml
@@ -6,4 +6,5 @@
 @using UdemyCarBook.DTOs.CarDTOs
 @using UdemyCarBook.DTOs.FooterAddressDTOs
 @using UdemyCarBook.DTOs.ContactDTOs
+@using UdemyCarBook.DTOs.BannerDTOs
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
