--- a/Frontends/UdemyCarBook.WebUI/Views/_ViewImports.cshtml
+++ b/Frontends/UdemyCarBook.WebUI/Views/_ViewImports.cshtml
@@ -7,4 +7,5 @@
 @using UdemyCarBook.DTOs.FooterAddressDTOs
 @using UdemyCarBook.DTOs.ContactDTOs
 @using UdemyCarBook.DTOs.BannerDTOs
+@using UdemyCarBook.DTOs.BlogDTOs
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
