carPricing added. UI main page and cars page modified

--- a/Frontends/UdemyCarBook.WebUI/Views/_ViewImports.cshtml
+++ b/Frontends/UdemyCarBook.WebUI/Views/_ViewImports.cshtml
@@ -8,4 +8,5 @@
 @using UdemyCarBook.DTOs.ContactDTOs
 @using UdemyCarBook.DTOs.BannerDTOs
 @using UdemyCarBook.DTOs.BlogDTOs
+@using UdemyCarBook.DTOs.CarPricingDTOs
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
