--- a/Frontends/UdemyCarBook.WebUI/Views/Car/Index.cshtml
+++ b/Frontends/UdemyCarBook.WebUI/Views/Car/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<ResultCarWithBrandsDTO>
+﻿@model List<ResultCarPricingWithCarDTO>
 
 @{
     ViewData["Title"] = "Index";
@@ -17,7 +17,7 @@
     						<h2 class="mb-0"><a href="car-single.html">@item.Model</a></h2>
     						<div class="d-flex mb-3">
 	    						<span class="cat">@item.BrandName</span>
-	    						<p class="price ml-auto">$1200 <span>/Gün</span></p>
+	    						<p class="price ml-auto">@item.Amount <span>/@item.PricingName</span></p>
     						</div>
     						<p class="d-flex mb-0 d-block"><a href="#" class="btn btn-primary py-2 mr-1">Hemen Kirala</a> <a href="car-single.html" class="btn btn-secondary py-2 ml-1">Detaylar</a></p>
     					</div>
