--- a/Frontends/UdemyCarBook.WebUI/Views/Shared/Components/_AboutUsComponentPartial/Default.cshtml
+++ b/Frontends/UdemyCarBook.WebUI/Views/Shared/Components/_AboutUsComponentPartial/Default.cshtml
@@ -1,6 +1,4 @@
-﻿@model List<UdemyCarBook.DTOs.AboutDTOs.ResultAboutDTO>
-
-
+﻿@model List<ResultAboutDTO>
     @foreach(var item in Model){
 
     <section class="ftco-section ftco-about">
@@ -14,7 +12,7 @@
                         <h2 class="mb-4">@item.title</h2>
 
                         <p>@item.description</p>
-                        <p><a href="#" class="btn btn-primary py-3 px-4">Araç Kirala</a></p>
+                        <p><a href="/RentACar/Index/" class="btn btn-primary py-3 px-4">Araç Kirala</a></p>
                     </div>
                 </div>
             </div>
