UI blog details page added with componentPartial, TagClouds class added, needed DTOs added

--- a/Frontends/UdemyCarBook.WebUI/Views/_ViewImports.cshtml
+++ b/Frontends/UdemyCarBook.WebUI/Views/_ViewImports.cshtml
@@ -9,4 +9,7 @@
 @using UdemyCarBook.DTOs.BannerDTOs
 @using UdemyCarBook.DTOs.BlogDTOs
 @using UdemyCarBook.DTOs.CarPricingDTOs
+@using UdemyCarBook.DTOs.CategoryDTOs
+@using UdemyCarBook.DTOs.TagCloudsDTOs
+@using UdemyCarBook.DTOs.AuthorDTOs
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
