--- a/Frontends/UdemyCarBook.WebUI/Views/AdminCar/CreateCar.cshtml
+++ b/Frontends/UdemyCarBook.WebUI/Views/AdminCar/CreateCar.cshtml
@@ -20,7 +20,7 @@
                                 @Html.DropDownListFor(x=>x.BrandId, (List<SelectListItem>)ViewBag.BrandValues, new{@class="form-control"})
                             </div>
                             <div class="form-group">
-                                <label for="exampleInputModel"></label>
+                                <label for="exampleInputModel">Model</label>
                                 <input type="text" class="form-control" id="exampleInputModel" asp-for="Model" placeholder="Model giriniz."/>
                             </div>  
                             <div class="form-group">
