--- a/Frontends/UdemyCarBook.WebUI/Views/_ViewImports.cshtml
+++ b/Frontends/UdemyCarBook.WebUI/Views/_ViewImports.cshtml
@@ -12,4 +12,6 @@
 @using UdemyCarBook.DTOs.CategoryDTOs
 @using UdemyCarBook.DTOs.TagCloudsDTOs
 @using UdemyCarBook.DTOs.AuthorDTOs
+@using UdemyCarBook.DTOs.FeatureDTOs
+@using UdemyCarBook.DTOs.BrandDTOs
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
