--- a/Frontends/UdemyCarBook.WebUI/Areas/Admin/Views/AdminCategory/Index.cshtml
+++ b/Frontends/UdemyCarBook.WebUI/Areas/Admin/Views/AdminCategory/Index.cshtml
@@ -1,9 +1,8 @@
-﻿@model List<ResultBrandDTO>
-
-    @{
+﻿@model List<ResultCategoryDTO>
+@{
     ViewData["Title"] = "Index";
     Layout = "~/Views/AdminLayout/Index.cshtml";
-    int count=0;
+    int count = 0;
 }
 
     <div class="page-content">
@@ -13,42 +12,42 @@
                     @if(Model.Count()>0){
                     <div class="card">                        
                         <div class="card-body">
-                            <h4 class="card-title">Araç Markaları Listesi</h4>
+                            <h4 class="card-title">Blog Katergorileri Listesi</h4>
                             <p class="card-subtitle mb-4">
-                                Arabaların markaları ile ilgili ekleme, silme, güncelleme gibi işlemleri bu sayfa üzerinden gerçekleştirebilirsiniz.
+                                Bloglara ait kategorilerle ilgili işlemlerin gerçekleştirileceği sayfadır. Bilgileri eksiksiz girmeniz önemlidir.
                             </p>
                             <div class="table-responsive">
                                 <table class="table mb-0">
                                     <thead>
                                         <tr>
                                             <th>#</th>
-                                            <th>Marka Adı</th>
+                                            <th>Kategori Adı</th>
                                             <th>Sil</th>
                                             <th>Güncelle</th>
-                                            <th>Markaya Ait Araçlar</th>
+                                            <th>Kategoriye Ait Bloglar</th>
                                         </tr>
                                     </thead>
                                     <tbody>
                                         @foreach(var item in Model){
-                                    count++;
-                                    <tr>
-                                        <th scope="row">@count</th>
+                                        count++;
+                                    <tr>                                         
+                                        <td>@count</td>
                                         <td>@item.Name</td>
-                                        <td><a href="/AdminBrand/RemoveBrand/@item.Id" class="btn btn-outline-danger">Sil</a></td>
-                                        <td><a href="/AdminBrand/UpdateBrand/@item.Id" class="btn btn-outline-success">Güncelle</a></td>
-                                        <td><a href="/AdminBrand/UpdateBrand/@item.Id" class="btn btn-outline-dark">Markaya Ait Araçlar</a></td>
+                                        <td><a href="/Admin/AdminCategory/RemoveCategory/@item.Id" class="btn btn-outline-danger">Sil</a></td>
+                                        <td><a href="/Admin/AdminCategory/UpdateCategory/@item.Id" class="btn btn-outline-success">Güncelle</a></td>
+                                        <td><a href="#" class="btn btn-outline-dark">Kategorideki Bloglar</a></td>
                                     </tr>
                                         }
                                     </tbody>
                                 </table>
-                                <a href="/AdminBrand/CreateBrand/" class="btn btn-outline-primary">Yeni Marka Ekle</a>
+                                <a href="/Admin/AdminCategory/CreateCategory/" class="btn btn-outline-primary">Yeni Kategori Ekle</a>
                             </div>
                         </div>                       
                     </div>
                     }
                      else{                        
-                     <p class="bg-danger text-white p-4 text-center card-body table-responsive">Araç markası bulunamadı. Araç markası eklemek için "Yeni Marka Ekle" butonuna tıklayınız.</p>
-                     <a href="/AdminBrand/CreateBrand/" class="btn btn-outline-primary">Yeni Marka Ekle</a>
+                     <p class="bg-danger text-white p-4 text-center card-body table-responsive">Kategori bulunamadı.Kategori eklemek için "Yeni Kategori Ekle" butonuna tıklayınız.</p>
+                     <a href="/Admin/AdminCategory/CreateCategory/" class="btn btn-outline-primary">Yeni Kategori Ekle</a>
                     }
                 </div>
             </div>
