--- a/Frontends/UdemyCarBook.WebUI/Areas/Admin/Views/AdminBanner/Index.cshtml
+++ b/Frontends/UdemyCarBook.WebUI/Areas/Admin/Views/AdminBanner/Index.cshtml
@@ -15,7 +15,7 @@
                         <div class="card-body">
                             <h4 class="card-title">Ana Sayfa Banner Alanı</h4>
                             <p class="card-subtitle mb-4">
-                                Ana sayfanın banner alanında bulunan bilgileri aşağıdan düzenleyebilirsiniz. Tema bütünlüğü için lütfen 1 adet veri girişi yapınız
+                                Ana sayfanın banner alanında bulunan bilgileri aşağıdan düzenleyebilirsiniz. Tema bütünlüğü için lütfen 1 adet veri girişi yapınız.
                             </p>
                             <div class="table-responsive">
                                 <table class="table mb-0">
@@ -34,8 +34,7 @@
                                     <tbody>
                                         @foreach(var item in Model){
                                     
-                                    <tr>
-                                        
+                                    <tr>                                        
                                         <td>@item.Title</td>
                                         <td>@item.Description</td>
                                         <td>@item.VideoUrl</td>
