--- a/Frontends/UdemyCarBook.WebUI/Areas/Admin/Views/_ViewImports.cshtml
+++ b/Frontends/UdemyCarBook.WebUI/Areas/Admin/Views/_ViewImports.cshtml
@@ -14,4 +14,5 @@
 @using UdemyCarBook.DTOs.AuthorDTOs
 @using UdemyCarBook.DTOs.FeatureDTOs
 @using UdemyCarBook.DTOs.BrandDTOs
+@using UdemyCarBook.DTOs.CommentDTOs
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
