--- a/Frontends/UdemyCarBook.WebUI/Areas/Admin/Views/_ViewImports.cshtml
+++ b/Frontends/UdemyCarBook.WebUI/Areas/Admin/Views/_ViewImports.cshtml
@@ -15,4 +15,5 @@
 @using UdemyCarBook.DTOs.FeatureDTOs
 @using UdemyCarBook.DTOs.BrandDTOs
 @using UdemyCarBook.DTOs.CommentDTOs
+@using UdemyCarBook.DTOs.PricingDTOs
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
