admin contact, footerAddress, service, socialMedia, testimonial pages added

--- a/Frontends/UdemyCarBook.WebUI/Areas/Admin/Views/_ViewImports.cshtml
+++ b/Frontends/UdemyCarBook.WebUI/Areas/Admin/Views/_ViewImports.cshtml
@@ -16,4 +16,6 @@
 @using UdemyCarBook.DTOs.BrandDTOs
 @using UdemyCarBook.DTOs.CommentDTOs
 @using UdemyCarBook.DTOs.PricingDTOs
+@using UdemyCarBook.DTOs.LocationDTOs
+@using UdemyCarBook.DTOs.SocialMediaDTOs
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
