--- a/Frontends/UdemyCarBook.WebUI/Views/_ViewImports.cshtml
+++ b/Frontends/UdemyCarBook.WebUI/Views/_ViewImports.cshtml
@@ -14,4 +14,6 @@
 @using UdemyCarBook.DTOs.AuthorDTOs
 @using UdemyCarBook.DTOs.FeatureDTOs
 @using UdemyCarBook.DTOs.BrandDTOs
+@using UdemyCarBook.DTOs.LocationDTOs
+@using UdemyCarBook.DTOs.RentACarDTOs
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
