reservation class, car reservation process and ui added

--- a/Frontends/UdemyCarBook.WebUI/Areas/Admin/Views/AdminBanner/Index.cshtml
+++ b/Frontends/UdemyCarBook.WebUI/Areas/Admin/Views/AdminBanner/Index.cshtml
@@ -41,7 +41,7 @@
                                         <td>@item.VideoDescription</td>
                                         <td><a href="/Admin/AdminBanner/RemoveBanner/@item.Id" class="btn btn-outline-danger">Sil</a></td>
                                         <td><a href="/Admin/AdminBanner/UpdateBanner/@item.Id" class="btn btn-outline-success">Güncelle</a></td>
-                                        <td><a href="#" class="btn btn-outline-dark">Youtube'da Aç</a></td>
+                                        <td><a href="@item.VideoUrl" target="_blank" class="btn btn-outline-dark">Youtube'da Aç</a></td>
                                     </tr>
                                         }
                                     </tbody>
