--- a/Frontends/UdemyCarBook.WebUI/Views/Default/Index.cshtml
+++ b/Frontends/UdemyCarBook.WebUI/Views/Default/Index.cshtml
@@ -3,6 +3,11 @@
     ViewData["Title"] = "Index";
     Layout = null;
 }
+<style>
+    #drop option{
+        color:black;
+    }
+</style>
 
 <!DOCTYPE html>
 <html lang="en">
@@ -23,7 +28,7 @@
                                 <h2>Aracınızı Hemen Kiralayın</h2>
                                 <div class="form-group">
                                     <label for="" class="label">Alınacak Lokasyon</label>
-                                    @Html.DropDownListFor(x => x.Id, (List<SelectListItem>)ViewBag.v, new { @class = "form-control", name = "id"})
+                                    @Html.DropDownListFor(x => x.Id, (List<SelectListItem>)ViewBag.v, new { @class = "form-control", @id="drop", name = "id"})
                                 </div>
                                 <div class="d-flex">
                                     <div class="form-group mr-2">
