--- a/Frontends/UdemyCarBook.WebUI/Views/Reservation/Index.cshtml
+++ b/Frontends/UdemyCarBook.WebUI/Views/Reservation/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model ResultLocationDTO
+﻿@model CreateReservationDTO
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/UILayout/Index.cshtml";
@@ -6,44 +6,46 @@
 
 <div class="col-md-12 block-9 mb-md-5">
     <form class="bg-light p-5 contact-form" method="post">
+        <h3 class="alert alert-success">Araç Rezervasyon Formu</h3>
+        <br />
         <div class="form-group">
-            <input type="text" class="form-control" *@ readonly>
+            <input asp-for="CarId" value="@ViewBag.carId" class="form-control" readonly disabled>
         </div>
         <div class="form-group">
             <label>Adınız</label>
-            <input type="text" class="form-control" *@ placeholder="John">
+            <input type="text" asp-for="Name" class="form-control"  placeholder="John">
         </div>
         <div class="form-group">
             <label>Soyadınız</label>
-            <input type="text" class="form-control" *@ placeholder="Doe">
+            <input type="text" asp-for="Surname" class="form-control" placeholder="Doe">
         </div>
         <div class="form-group">
             <label>Email Adresiniz</label>
-            <input type="email" class="form-control" *@ placeholder="example@example.com">
+            <input type="email" asp-for="Email" class="form-control"  placeholder="example@example.com">
         </div>
         <div class="form-group">
             <label>Telefon numaranız</label>
-            <input type="text" class="form-control" *@ placeholder="0555 555 55 55">
+            <input type="text" asp-for="Phone" class="form-control" placeholder="0555 555 55 55">
         </div>
         <div class="form-group">
             <label>Alınacak Lokasyon</label>
-            @Html.DropDownListFor(x => x.Id, (List<SelectListItem>)ViewBag.v, new { @class = "form-control" })
+            @Html.DropDownListFor(x => x.PickUpLocationId, (List<SelectListItem>)ViewBag.v, "---Alınacak lokasyonu seçiniz:", new { @class = "form-control" })
         </div>
         <div class="form-group">
             <label>Teslim Edilecek Lokasyon</label>
-            @Html.DropDownListFor(x => x.Id, (List<SelectListItem>)ViewBag.v, new { @class = "form-control" })
+            @Html.DropDownListFor(x => x.DropOffLocationId, (List<SelectListItem>)ViewBag.v, "---Teslim edilecek lokasyonu seçiniz:", new { @class = "form-control" })
         </div>
         <div class="form-group">
             <label>Yaşınız</label>
-            <input type="text" class="form-control" placeholder="18+">
+            <input type="text" asp-for="Age" class="form-control" placeholder="18+">
         </div>
         <div class="form-group">
             <label>Ehliyet Yılınız</label>
-            <input type="text" class="form-control" placeholder="2020">
+            <input type="text" asp-for="DriverLicenseYear" class="form-control" placeholder="2020">
         </div>
         <div class="form-group">
             <label>Eklemek İstedikleriniz</label>
-            <textarea cols="30" rows="7" class="form-control" placeholder="Varsa eklemek istedikleriniz."></textarea>
+            <textarea cols="30" rows="7" asp-for="Description" class="form-control" placeholder="Varsa eklemek istedikleriniz."></textarea>
         </div>
         <div class="form-group">
             <input type="submit" value="Rezervasyonu Tamamla" class="btn btn-primary py-3 px-5">
