--- a/Frontends/UdemyCarBook.WebUI/Views/_ViewImports.cshtml
+++ b/Frontends/UdemyCarBook.WebUI/Views/_ViewImports.cshtml
@@ -16,4 +16,5 @@
 @using UdemyCarBook.DTOs.BrandDTOs
 @using UdemyCarBook.DTOs.LocationDTOs
 @using UdemyCarBook.DTOs.RentACarDTOs
+@using UdemyCarBook.DTOs.ReservationDTOs
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
