car pricings time periods add brandname and coverimageurl. main page footer statistic added

--- a/Frontends/UdemyCarBook.WebUI/Views/_ViewImports.cshtml
+++ b/Frontends/UdemyCarBook.WebUI/Views/_ViewImports.cshtml
@@ -17,4 +17,5 @@
 @using UdemyCarBook.DTOs.LocationDTOs
 @using UdemyCarBook.DTOs.RentACarDTOs
 @using UdemyCarBook.DTOs.ReservationDTOs
+@using UdemyCarBook.DTOs.CommentDTOs
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
