--- a/Frontends/UdemyCarBook.WebUI/Views/Default/Index.cshtml
+++ b/Frontends/UdemyCarBook.WebUI/Views/Default/Index.cshtml
@@ -4,8 +4,8 @@
     Layout = null;
 }
 <style>
-    #drop option{
-        color:black;
+    #drop option {
+        color: black;
     }
 </style>
 
@@ -28,7 +28,7 @@
                                 <h2>Aracınızı Hemen Kiralayın</h2>
                                 <div class="form-group">
                                     <label for="" class="label">Alınacak Lokasyon</label>
-                                    @Html.DropDownListFor(x => x.Id, (List<SelectListItem>)ViewBag.v, new { @class = "form-control", @id="drop", name = "id"})
+                                    @Html.DropDownListFor(x => x.Id, (List<SelectListItem>)ViewBag.v, new { @class = "form-control", @id = "drop", name = "id" })
                                 </div>
                                 <div class="d-flex">
                                     <div class="form-group mr-2">
@@ -37,16 +37,16 @@
                                     </div>
                                     <div class="form-group ml-2">
                                         <label for="" class="label">İade Tarihi</label>
-                                        <input type="text" class="form-control" name="book_off_date" id="book_off_date" placeholder="Date">
+                                        <input type="text" class="form-control" name="book_off_date" id="book_off_date" placeholder="Tarih Seçiniz">
                                     </div>
                                 </div>
                                 <div class="form-group">
                                     <label for="" class="label">Alış Saati</label>
-                                    <input type="text" class="form-control" name="time_pick" id="time_pick" placeholder="Time">
+                                    <input type="text" class="form-control" name="time_pick" id="time_pick" placeholder="Saat Seçiniz">
                                 </div>
                                 <div class="form-group">
                                     <label for="" class="label">İade Saati</label>
-                                    <input type="text" class="form-control" name="time_off" id="time_pick" placeholder="Time">
+                                    <input type="text" class="form-control" name="time_off" id="time_pick" placeholder="Saat Seçiniz">
                                 </div>
                                 <div class="form-group">
                                     <button class="btn btn-secondary py-3 px-4">Uygun Araçları Listele</button>
@@ -78,12 +78,12 @@
                                         <div class="services w-100 text-center">
                                             <div class="icon d-flex align-items-center justify-content-center"><span class="flaticon-rent"></span></div>
                                             <div class="text w-100">
-                                                <h3 class="heading mb-2">Sana Uygun Aracı Bul</h3>
+                                                <h3 class="heading mb-2">Sana Uygun Aracı Bul, Kiralamayı Tamamla</h3>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
-                                <p><a href="#" class="btn btn-primary py-3 px-4">Kiralamayı Tamamla</a></p>
+                                <p><a href="/CarPricing/Index" class="btn btn-primary py-3 px-4">Fiyat Listemizi Görün</a></p>
                             </div>
                         </div>
                     </div>
