--- a/Frontends/UdemyCarBook.WebUI/Views/Shared/Components/_BlogDetailMainComponentPartial/Default.cshtml
+++ b/Frontends/UdemyCarBook.WebUI/Views/Shared/Components/_BlogDetailMainComponentPartial/Default.cshtml
@@ -8,9 +8,9 @@
     @await Component.InvokeAsync("_BlogDetailAuthorAboutComponentPartial",new {id = ViewBag.blogId})
             
     <div class="pt-5 mt-5">
-        <h3 class="mb-5">6 Yorum</h3>
+        <h3 class="mb-5">@ViewBag.CommentCountByBlog Yorum</h3>
 
-        @await Component.InvokeAsync("_CommentListByBlogComponentPartial")
+        @await Component.InvokeAsync("_CommentListByBlogComponentPartial", new { id = ViewBag.blogId })
 
         @await Component.InvokeAsync("_AddCommentComponentPartial")
                 
