--- a/Frontends/UdemyCarBook.WebUI/Views/Shared/Components/_DefaultCoverUILayoutComponentPartial/Default.cshtml
+++ b/Frontends/UdemyCarBook.WebUI/Views/Shared/Components/_DefaultCoverUILayoutComponentPartial/Default.cshtml
@@ -1,7 +1,8 @@
 ﻿@model List<ResultBannerDTO>
 
 
-    @foreach(var item in Model){
+@foreach (var item in Model)
+{
     <div class="hero-wrap ftco-degree-bg" style="background-image: url('/carbook-master/images/bg_1.jpg');" data-stellar-background-ratio="0.5">
         <div class="overlay"></div>
         <div class="container">
@@ -23,4 +24,4 @@
             </div>
         </div>
     </div>
-    }
+}
