--- a/Frontends/UdemyCarBook.WebUI/Views/Shared/Components/_GetLast3BlogsWithAuthorComponentPartial/Default.cshtml
+++ b/Frontends/UdemyCarBook.WebUI/Views/Shared/Components/_GetLast3BlogsWithAuthorComponentPartial/Default.cshtml
@@ -9,22 +9,23 @@
             </div>
         </div>
         <div class="row d-flex">
-            @foreach(var item in Model){
-            <div class="col-md-4 d-flex ftco-animate">
-                <div class="blog-entry justify-content-end">
-                    <a href="blog-single.html" class="block-20" style="background-image: url('@item.CoverImageUrl');"></a>
-                    <div class="text pt-4">
-                        <div class="meta mb-3">
-                            <div><a href="#">@item.CreatedDate.ToShortDateString()</a></div>
-                            <div><a href="#">@item.AuthorName</a></div>
-                            <div><a href="#" class="meta-chat"><span class="icon-chat"></span>Yorum Sayısı</a></div>
+            @foreach (var item in Model)
+            {
+                <div class="col-md-4 d-flex ftco-animate">
+                    <div class="blog-entry justify-content-end">
+                        <a href="/Blog/BlogDetail/@item.Id" class="block-20" style="background-image: url('@item.CoverImageUrl');"></a>
+                        <div class="text pt-4">
+                            <div class="meta mb-3">
+                                <div><a href="#">@item.CreatedDate.ToShortDateString()</a></div>
+                                <div><a href="#">@item.AuthorName</a></div>
+                                <div><a href="#" class="meta-chat"><span class="icon-chat"></span>Yorum Sayısı</a></div>
+                            </div>
+                            <h3 class="heading mt-2"><a href="#">@item.Title</a></h3>
+                            <p><a href="/Blog/BlogDetail/@item.Id" class="btn btn-primary">Devamını Oku</a></p>
                         </div>
-                        <h3 class="heading mt-2"><a href="#">@item.Title</a></h3>
-                        <p><a href="#" class="btn btn-primary">Devamını Oku</a></p>
                     </div>
                 </div>
-            </div>
-            } 
+            }
         </div>
     </div>
 </section>
