admin dashboard end and car detail page added

--- a/Frontends/UdemyCarBook.WebUI/Views/_ViewImports.cshtml
+++ b/Frontends/UdemyCarBook.WebUI/Views/_ViewImports.cshtml
@@ -18,4 +18,6 @@
 @using UdemyCarBook.DTOs.RentACarDTOs
 @using UdemyCarBook.DTOs.ReservationDTOs
 @using UdemyCarBook.DTOs.CommentDTOs
+@using UdemyCarBook.DTOs.CarFeatureDTOs
+@using UdemyCarBook.DTOs.CarDescriptionDTOs
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
