--- a/Frontends/UdemyCarBook.WebUI/Views/AdminCar/Index.cshtml
+++ b/Frontends/UdemyCarBook.WebUI/Views/AdminCar/Index.cshtml
@@ -28,6 +28,7 @@
                                         <th>Sil</th>
                                         <th>Güncelle</th>
                                         <th>Detaylar</th>
+                                        <th>Özellik Ata</th>
                                         <th>Sitede Gör</th>
                                         <th>Fiyat Bilgileri</th>
                                     </tr>
@@ -45,7 +46,8 @@
                                             <td><a href="/AdminCar/RemoveCar/@item.Id" class="btn btn-outline-danger">Sil</a></td>
                                             <td><a href="/AdminCar/UpdateCar/@item.Id" class="btn btn-outline-success">Güncelle</a></td>
                                             <td><a href="/Admin/AdminCarFeatureDetail/Index/@item.Id" class="btn btn-outline-dark">Detaylar</a></td>
-                                            <td><a href="/Admin/AdminCarFeatureDetail/Index/@item.Id" class="btn btn-outline-warning">Sitede Gör</a></td>
+                                            <td><a href="/Admin/AdminCarFeature/CreateFeatureByCarId/@item.Id" class="btn btn-outline-info">Özellik Ata</a></td>
+                                            <td><a href="/Admin/AdminCarDetail/Index/@item.Id" class="btn btn-outline-warning">Sitede Gör</a></td>
                                             <td><a href="/Admin/AdminCarFeatureDetail/Index/@item.Id" class="btn btn-outline-secondary">Fiyat Bilgileri</a></td>
                                         </tr>
                                     }
