--- a/Frontends/UdemyCarBook.WebUI/Views/AdminLayout/AdminSidebarPartial.cshtml
+++ b/Frontends/UdemyCarBook.WebUI/Views/AdminLayout/AdminSidebarPartial.cshtml
@@ -5,7 +5,8 @@
         <div class="navbar-brand-box">
             <a href="#" class="logo">
                 <i class="mdi mdi-alpha-x-circle"></i>
-                <span>CarBook Admin
+                <span>
+                    CarBook Admin
                 </span>
             </a>
         </div>
@@ -15,7 +16,7 @@
             <ul class="metismenu list-unstyled" id="side-menu">
                 <li class="menu-title">Menü</li>
 
-                <li><a href="#" class="waves-effect"><i class="feather-airplay"></i><span>Dashboard</span></a></li>
+                <li><a href="/Admin/AdminDashboard/Index" class="waves-effect"><i class="feather-airplay"></i><span>Dashboard</span></a></li>
                 <li><a href="/Admin/AdminStatistics/Index" class="waves-effect"><i class="fas fa-chart-pie"></i><span>İstatistikler</span></a></li>
                 <li><a href="/Default/Index" class="waves-effect"><i class="fas fa-home"></i><span>Siteye Git</span></a></li>
                 <li><a href="/AdminCar/Index" class="waves-effect"><i class="fas fa-car"></i><span>Araç İşlemleri</span></a></li>
@@ -40,20 +41,20 @@
 
                 @*
                 <li>
-                    <a href="javascript: void(0);" class="has-arrow waves-effect"><i class="feather-copy"></i><span>Pages</span></a>
-                    <ul class="sub-menu" aria-expanded="false">
-                        <li><a href="pages-invoice.html">Invoice</a></li>
-                        <li><a href="pages-starter.html">Starter Page</a></li>
-                        <li><a href="pages-maintenance.html">Maintenance</a></li>
-                        <li><a href="pages-faqs.html">FAQs</a></li>
-                        <li><a href="pages-pricing.html">Pricing</a></li>
-                        <li><a href="pages-login.html">Login</a></li>
-                        <li><a href="pages-register.html">Register</a></li>
-                        <li><a href="pages-recoverpw.html">Recover Password</a></li>
-                        <li><a href="pages-lock-screen.html">Lock Screen</a></li>
-                        <li><a href="pages-404.html">Error 404</a></li>
-                        <li><a href="pages-500.html">Error 500</a></li>
-                    </ul>
+                <a href="javascript: void(0);" class="has-arrow waves-effect"><i class="feather-copy"></i><span>Pages</span></a>
+                <ul class="sub-menu" aria-expanded="false">
+                <li><a href="pages-invoice.html">Invoice</a></li>
+                <li><a href="pages-starter.html">Starter Page</a></li>
+                <li><a href="pages-maintenance.html">Maintenance</a></li>
+                <li><a href="pages-faqs.html">FAQs</a></li>
+                <li><a href="pages-pricing.html">Pricing</a></li>
+                <li><a href="pages-login.html">Login</a></li>
+                <li><a href="pages-register.html">Register</a></li>
+                <li><a href="pages-recoverpw.html">Recover Password</a></li>
+                <li><a href="pages-lock-screen.html">Lock Screen</a></li>
+                <li><a href="pages-404.html">Error 404</a></li>
+                <li><a href="pages-500.html">Error 500</a></li>
+                </ul>
                 </li>
                 *@
 
